--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -9,35 +9,18 @@
 %Function format
 \usepackage{lineno,hyperref}
 \modulolinenumbers[5]
-	 
-	\journal{Computational Materaials Science}
-	
-	%%%%%%%%%%%%%%%%%%%%%%%
-	%% Elsevier bibliography styles
-	%%%%%%%%%%%%%%%%%%%%%%%
-	%% To change the style, put a % in front of the second line of the current style and
-	%% remove the % from the second line of the style you would like to use.
-	%%%%%%%%%%%%%%%%%%%%%%%
-	
-	%% Numbered
-	%\bibliographystyle{model1-num-names}
-
-	%% Numbered without titles2
-	%\bibliographystyle{model1a-num-names}
-	
-	%% Harvard
+\journal{Materials and Design}
 \bibliographystyle{elsarticle-num.bst}
 \modulolinenumbers[5]
 \journal{Materials and Design}
 %%%%%%%%%%%%%%%%%%%%%%%
+
 \begin{document}
+
 \begin{frontmatter}
 \title{Effect of Nanovoid on Fracture Process of Two-Phase $\alpha$($\rm TiAl$)+$\gamma$($\rm Ti_3Al$) Alloy}
-%\tnotetext[mytitlenote]{*** \href{http: //www.ctan.org/tex-archive/macros/latex/contrib/elsarticle}{CTAN}.}
-%% Group authors per affiliation:
-%\author{Maomao Wang\fnref{myfootnote}}
-
 \address[mymainaddress]{School of Mechanical and Electronical Engineering, Lanzhou University of Technology. Lanzhou 730050, China}
+
 \begin{abstract}
 Fracture processes of nanocrystalline metallic materia is affected by dislocation, nanovoid and other defects. Existing studies of defect evolution in titanium-aluminium alloy cover the case that voids located in single crystals, inside grain in poly crystals and at the grain boundaries.Molecular dynamics simulation was performed to study the evolution of a spherical nanovoid in $\alpha$+$\gamma$ two-phase titanium-aluminium alloy under uniaxial tension. The results show that voids located at the $\alpha$/$\gamma$ phase boundary have significant detract to strength of Ti-Al polycrystalline.
 \end{abstract}
@@ -143,7 +126,7 @@ Dislocations crossing semi-coherent boundaries have to intersect the misfit disl
 %\subsection{Fracture Process with Intergranular Void }
 
 \subsection{Evolution of spherical void in the simulation with intragranular spherical voids}
-A step, of the width of a burgers vector, will be generated at both sidesof a crystal along teh direction of teh burgers vector after dislocation traversing teh entire crystal, as is shown in \ref{fig:}. A small tep will be formed at spherical void surface toward teh void interiorafter dislocation absorptionat sphericalvoid surfaces, as is shown in \ref{fig:}. If a great number of dislocation slip along their respective systemstowards teh spherical nanovoid in all directions, and are absorbed at spherical void surfaces, the spherical nanovoid will eventually shrink from teh dash circle to
+A step, of the width of a burgers vector, will be generated at both sidesof a crystal along teh direction of teh burgers vector after dislocation traversing teh entire crystal, as is shown in \ref{}. A small tep will be formed at spherical void surface toward teh void interiorafter dislocation absorptionat sphericalvoid surfaces, as is shown in \ref{}. If a great number of dislocation slip along their respective systemstowards teh spherical nanovoid in all directions, and are absorbed at spherical void surfaces, the spherical nanovoid will eventually shrink from teh dash circle to
 
 
 
