--- a/draft/ref/VIOLET-fracture.bib
+++ b/draft/ref/VIOLET-fracture.bib
@@ -7,7 +7,7 @@ BibTeX export options can be customized via Options -> BibTeX in Mendeley Deskto
 abstract = {Brittle fracture in carbon steel has a strong impact on the safety of the structures. Especially, the arresting technology of the running crack is the measure of last resort for ensuring structural integrity. Due to such high importance, many experimental and theoretical studies of brittle crack propagation have been conducted from both mechanical and microstructural viewpoints. It is thought that the elementary step of the brittle fracture of polycrystalline steel is the cleavage in each crystal grain and their connection process. However, the detailed mechanisms of brittle fracture have not been fully understood; for example, it is still unclear why the propagation rate under a large driving force is not increased up to the Rayleigh wave speed. Several difficulties hinder the achievement of a detailed understanding so far: 1) crack propagation is quite rapid, 2) the crystal grain is usually too small (10–100 $\mu$m) to collect sufficient information, 3) the microstructure is very complicated in most case, i.e., containing different phases, microstructures, precipitates and inclusions. In this study, to eliminate such difficulties, 3{\%} silicon steel in which microstructure is the ferrite single phase and the grain size is increased to 4–5 mm is used. This steel can be fractured in a brittle manner, even under ambient temperature. For this steel, by using a high speed camera and strain gauge data with a high sampling rate, the elementary process of brittle crack propagation is elucidated. As a result, it is revealed that the brittle crack propagation rate even in a single-crystal grain is much slower than the Rayleigh wave speed. This seems to be due to the presence of twin deformations and twin boundary cracks in crystal grain as observed on the fracture surface. Using the analysis of electron back scatter diffraction (EBSD) data, the mechanism of twin deformation and twin boundary crack is revealed. Additionally, it is shown that the brittle crack propagation rate where the path includes crystal grain boundaries is much slower. This delay seems to be related to the misorientation angle at the GB. By applying our simplified model, the delay effect at the grain boundary can be successfully explained.},
 author = {Nakanishi, Daiki and Kawabata, Tomoya and Aihara, Shuji},
 doi = {10.1016/j.actamat.2017.11.020},
-file = {:home/alex/Documents/Mendeley Desktop/2018/2018{\_}Brittle crack propagation resistance inside grain and at high angle grain boundary in 3{\%} Si-Fe alloy.pdf:pdf},
+file = {:home/alex/Documents/Mendeley Desktop/Acta Materialia/2018{\_}Brittle crack propagation resistance inside grain and at high angle grain boundary in 3{\%} Si-Fe alloy.pdf:pdf},
 issn = {13596454},
 journal = {Acta Materialia},
 keywords = {Brittle crack propagating rate,Cleavage fracture,Delay at grain boundary,Twin boundary crack,Twin deformation},
