--- a/draft/alexpub.tex
+++ b/draft/alexpub.tex
@@ -15,7 +15,7 @@
  
 % Full title of the paper (Capitalized)
 % \Title{Effect of Nanovoid on Fracture Process of Two-Phase $\gamma$($\rm TiAl$)+$\alpha$($\rm Ti_3Al$) Alloy}
-\Title{On the Cold Deformation Behaviour of Two Phase TiAl Alloy with and without Void Defects}
+\Title{The Effect of Void on the}
 % Author Orchid ID: enter ID or remove command
 \newcommand{\orcidauthorA}{0000-0000-000-000X} % Add \orcidA{} behind the author's name
 %\newcommand{\orcidauthorB}{0000-0000-000-000X} % Add \orcidB{} behind the author's name
@@ -174,14 +174,7 @@ From Fig.\ref{fig:yield}, of the two constituents of ($\alpha_2$+$\gamma$) alloy
 		\caption{$\alpha$ phase deformation}
 	\end{figure}
 Basic deformationg mechanism of $\alpha$ phase 
-	
-	\begin{figure}[ht]
-		\centering
-		\includegraphics[width=1\linewidth]{"img/fracture3"}
-		\caption{Yield process of the models}
-		\label{fig:yield}
-	\end{figure}
-	
+
 	\begin{figure}[ht]
 		\centering
 		\includegraphics[width=1\linewidth]{"img/disl-gamma"}
@@ -189,12 +182,12 @@ Basic deformationg mechanism of $\alpha$ phase
 		\label{fig:dis-alpha}
 	\end{figure}
 
-	\begin{figure}[ht]
-		\centering
-		\includegraphics[width=1\linewidth]{img/disl2-gamma}
-		\label{fig:surf}
-		\caption{stress-strain curve}
-	\end{figure}
+%	\begin{figure}[ht]
+%		\centering
+%		\includegraphics[width=1\linewidth]{img/disl2-gamma}
+%		\label{fig:surf}
+%		\caption{stress-strain curve}
+%	\end{figure}
 1.In many cases the orientation of slip slip is changed because the crystallographically available slip and directions are not continuous across the interface. This may significantly reduce the Schmid factor and thus impede slip transfer. At the $\gamma/\gamma$ interfaces the orientation of the slip plan could change through a relevantly large angle of about 90 degree. Reorientation of slip is always required at the $\alpha_{2}/\gamma$ interface; the smallest angle between the corresponding slip planes ${1 1 1 }_{\gamma}$ and ${ 1 0 -1 0}_{\alpha_2}$ is about 19 degree \cite{}.
 	
 The core of  a dislocation intersecting an interface often needs to be transformed. For example, an ordinary 1/2<110] dislocation gliding in one $\gamma$ grain has to be converted in to a <101] super dislocation with the double Burgers vector gliding in an adjacent $\gamma$ grain. At the $\alpha/\gamma$ interface the dislocations existing in the $D0_{19}$ structure have to be transformed into dislocations consistent with the $L1_0$structure. These core transformations are associated with a change of the dislocation line energy because the lengths of the Burgers vectors and the shear module are different.
@@ -235,7 +228,7 @@ A step, of the width of a burgers vector, will be generated at both sidesof a cr
 	\caption{orowan}
 	\label{fig:dis-void}
 \end{figure}
-
+ 
 
 	
 \subsection{The effect of void on the strength of material}
@@ -249,7 +242,17 @@ The effect of siz is expectable that the greater voids detracts the strength of 
 	\end{equation}
 	
 where $\sigma_0$ is the strength of the model without void defects 5.26 Gpa, and $A_0$ is initial section area, $ A = a\times b = 36000 A^2$, $A^* $ is section area in consider of the subsection that results from the voids. Comparing with the strength determined by molecular dynamics simulation and the resuts calculated with formulation \ref{eq:section}, it can be assumed that the main factor that affects the strength of materials can be attributed to local behaciour of the materials, thus revolution of defects should be examined carefully.
+
 	
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=1\linewidth]{"img/fracture3"}
+	\caption{Yield process of the models}
+	\label{fig:yield}
+\end{figure}
+
+
+
 	\begin{figure}[ht]
 		\centering
 		\begin{minipage}{0.495\textwidth}
