--- a/draft/alexpub.tex
+++ b/draft/alexpub.tex
@@ -51,7 +51,7 @@ $^{2}$ \quad Affiliation 2; e-mail@e-mail.com}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
-\bibliography{ref/VIOLET-ref.bib}
+
 
 \section{Introduction}
 TiAl alloy has been used as structural material in aviation industry because its inherent advantages such as low density and self-diffusion rates, high elastic module and high strength \cite{vu2013}. Two-phase titanium aluminum alloys with proper phase distribution and grain size exhibit better mechanical performance compared with monolithic constituents $\gamma$(TiAl) and $\gamma$($\rm Ti_3Al$) alloy \cite{Kim1995}. Brittle fracture in TiAl alloy strongly affects the safety of fracture of structure like turbo of aircraft engine and combustion generator. 
@@ -230,7 +230,7 @@ A step, of the width of a burgers vector, will be generated at both sidesof a cr
 \end{figure}
  
 
-	
+	 
 \subsection{The effect of void on the strength of material}
 
 Void of R=10$\AA$ was placed at phase boundary, inside $\alpha$ phase grain respectively. Effect of void at different position under uniaxial tension is shown in Fig.\ref{fig:stress&strain}. The strength of materails with void in different size and at different position is shown in Fig.\ref{fig:stress&strain}. The results show that the model without void defect has best stength, while the void loacted inside $\alpha$ phase detracts the strength of the material most, and the void at the phase boundary have less impact on the strength.
@@ -362,7 +362,8 @@ where m is the Schmid factor :
 %	\section{Conclusion}
 %	%\bibliographystyle{elsarticle-num.bst}
 %	
-	
+\reftitle{References}
+\bibliography{ref/VIOLET-ref.bib}
 \end{document}
 
 
