--- a/draft/alexpub.tex
+++ b/draft/alexpub.tex
@@ -272,7 +272,7 @@ where $\sigma_0$ is the strength of the model without void defects 5.26 Gpa, and
 	
 	
 	%\begin{figure}[ht]
-	%	\centering
+	%	\centeringT
 	%	\includegraphics[width=0.7\linewidth]{img/allline}
 	%	\caption{Fracture process of specimen with void in $\alpha$ phase}
 	%	\label{ }
@@ -281,7 +281,7 @@ where $\sigma_0$ is the strength of the model without void defects 5.26 Gpa, and
 	
 	
 	
-	
+ 	
 	
 Voids with different size: 2A, 5A, 10A, 15A were placed into the model respectively. It has been observed that  voids detracts the strengths of the material. The max stress stress of the simulation cell decreases as the volume of voids are lareger. From Fig \ref{}, there is a critical value of void radius about 15A, the void greater than 15A cause serious detraction of strength of material. 
 Engineering stress is calculated
